objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <label>Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <picklist>
            <picklistValues>
                <fullName>30 Minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60+ Minutes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hands_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hands On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Attendees__c</fullName>
        <label>Max # Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Hookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Hookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Attendees__c</fullName>
        <label>Total Attendees</label>
        <summaryForeignKey>Registrant__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Abstract__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Max_Attendees__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>